--- a/src/SideBarUseState.module.css
+++ b/src/SideBarUseState.module.css
@@ -7,7 +7,7 @@
     top: 0;
     min-height: 100vh;
     width: 300px;
-    background-color: lightblue;
+    background: linear-gradient(to bottom,#f7f8f7,#a87f408f);
     padding: 5px;
 }
 
@@ -24,11 +24,13 @@
     vertical-align: middle;
     height: 100px;
     width: 200px;
-    border: 2px ridge green;
+    border: 20px ridge rgb(33, 215, 221);
     background-color: lightpink;
 }
 
 .element span {
     vertical-align: middle;
     display: table-cell;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
 }
