--- a/src/SideBarUseState.module.css
+++ b/src/SideBarUseState.module.css
@@ -25,7 +25,7 @@
     height: 100px;
     width: 200px;
     border: 20px ridge rgb(33, 215, 221);
-    background-color: lightpink;
+    background-color: #ffffff8e;
 }
 
 .element span {
