--- a/src/ReduxSideBar.module.css
+++ b/src/ReduxSideBar.module.css
@@ -23,7 +23,7 @@
     height: 100px;
     width: 200px;
     border: 20px ridge rgb(158, 7, 145);
-    background-color: lightpink;
+    background-color: #ffffff8e;
 }
 
 .element span {
